--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -18,6 +18,12 @@
             <li>High on the priority list, as a mobile app is not ideal for importing / organizing existing data</li>
         </ul>
         <br>
+
+      <p class="custom-font mb-1">Most of my fields are locked on mobile?!</p>
+            <ul class="custom-font accordion-content accordion-list-item">
+            <li>Attribute groups and fields are unlocked through the Progression system. You can construct a gadget that immediately unlocks everything after completing the first two categories</li>
+        </ul>
+        <br>
      <p class="custom-font mb-1">Are my worlds future-proof?</p>
             <ul class="custom-font accordion-content accordion-list-item">
             <li>Any world data created before the 1.0 release can not be guaranteed as fully compatible with the framework in the long term</li>
