--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -59,6 +59,12 @@
                 <li>A set of core world creation tools</li>
             </ul>
             <br>
+                <p class="custom-font mb-2">This database schema breaks down world data through several levels:</p>
+   <ul class="custom-font accordion-content accordion-list-item">
+        <li>18 essential element categories</li>
+        <li>Groups and fields to define and link them</li>
+        <li>Types and subtypes to classify and organize them</li>
+    </ul>
 
         </div>
     </div>
