--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -4,50 +4,85 @@
     {#     <p class="text-sm">18 April 2024</p>#}
     {#     <p class="text-sm">OW version: 0.15.10</p>#}
     <br>
-    <p class="mb-2">Welcome to the first release of the <b><a href="#" id="link-to-framework"
+
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Welcome to OnlyWorlds!</h3>
+    <br>
+    <p class="custom-font mb-2">OnlyWorlds is a world building platform where worlds can be</p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Created and edited by any supporting software</li>
+        <li>Brought to life through games and simulations</li>
+        <li>Easily transferred across applications</li>
+    </ul>
+
+    <br>
+    <p class="custom-font mb-2">More information in the <b><a href="#" id="link-to-framework"
                                                               class="text-blue-500 hover:underline">OnlyWorlds
-        Framework</a></b></p>
+        Framework</a></b> section</p>
 
-    <br>
-    <br>
-    <br>
-    <br>
-
-
-    <p class="mb-2"><b><a href="#" id="link-to-worlds" class="text-blue-500 hover:underline">Worlds</a></b> can be
-        stored and retrieved on this server</p>
-    <p class="mb-2">Access the mobile app through the icons below. More info in <b><a href="#" id="link-to-apps"
-                                                                class="text-blue-500 hover:underline">Applications</a></b>
+    <p class="custom-font mb-2">Three applications, linked below, are available to introduce the framework
     </p>
-    <div>
+    <p class="custom-font mb-2">More information in the <b><a
+            href="#" id="link-to-apps"
+            class="text-blue-500 hover:underline">Applications section</a></b>
+    </p>
+   <p class="custom-font mb-2">Leave feedback using this <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+           class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
+           rel="noopener noreferrer">Feedback Form</a></b>
+    </p>
+      <p class="mb-4">Join the Discord server to provide feedback and contribute to the project</p>
+    <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
+        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
+    </a>
 
     </div>
+<br>
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Mobile App</h3>
     <br>
-       <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
-            <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;"">
-        </a>
-        <p class="mt-2">iOs version is staged in TestFlight. Follow steps to install TestFlight first, then open link again</p>
-        <br>
+    <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
+        <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;"">
+    </a>
+    <p class="custom-font mt-2">iOs version is staged in TestFlight. Follow steps to install TestFlight first, then open
+        link
+        again</p>
+    <br>
 
-      <a href="https://play.google.com/apps/internaltest/4700705784602434522" target="_blank"
-           rel="noopener noreferrer">
-            <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;" >
-        </a>
+    <a href="https://play.google.com/apps/internaltest/4700705784602434522" target="_blank"
+       rel="noopener noreferrer">
+        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
+    </a>
 
     <p class="mb-1">Android version is in closed testing. To access through this channel:
         Please send any google email, with 'android' as message, on the <a href="https://www.onlyworlds.com/about/"
-                                                     class="inline-block text-m font-bold text-blue-500 hover:underline"
-                                                     target="_blank" rel="noopener noreferrer">About page</a>. You will receive an access notification within 24 hours</p>
-        <p class="mb-8">Or directly download the APK file <a href="https://drive.google.com/file/d/1UwQ5pwH5zHQRQYIeKZJmvSYKve13BxjQ/view?usp=sharing"
-                                                     class="inline-block text-m font-bold text-blue-500 hover:underline"
-                                                     target="_blank" rel="noopener noreferrer">here</a>, transfer to your device, then open from file viewer </p>
+                                                                           class="inline-block text-m font-bold text-blue-500 hover:underline"
+                                                                           target="_blank" rel="noopener noreferrer">About
+            page</a>. You will receive an access notification within 24 hours</p>
+    <p class="mb-8">Or directly download the APK file <a
+            href="https://drive.google.com/file/d/1UwQ5pwH5zHQRQYIeKZJmvSYKve13BxjQ/view?usp=sharing"
+            class="inline-block text-m font-bold text-blue-500 hover:underline"
+            target="_blank" rel="noopener noreferrer">here</a>, transfer to your device, then open from file viewer </p>
 
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">World Viewer</h3>
+<br>
+   <p class="custom-font mb-2">Use the <b>  <a href="{% url 'unity' %}"
+               class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
+               rel="noopener noreferrer">Web Interface</a></b> to view and edit worlds
+    </p>
 
-         <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
-            <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
-        </a>
-           <p class="mt-1">Join the Discord server to provide feedback and contribute to the project</p>
-{% comment %}    <div class="flex flex-row items-center gap-4 mt-4">
+   <p class="custom-font mb-2">Or download the <b>  <a href="TODODO"
+               class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
+               rel="noopener noreferrer">windows desktop version</a></b>
+    </p>
+    <div>
+
+        </div>
+<br>
+   <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">World Mapper</h3>
+<br>
+ <p class="custom-font mb-2">Code and guide at the <b> <a href="TODODO"
+               class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
+               rel="noopener noreferrer"> Mapper repository </a></b>
+    </p>
+    {% comment %}    <div class="flex flex-row items-center gap-4 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
             <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;">
         </a>
@@ -64,9 +99,6 @@
 
     <div>
 
-        <a href="https://forms.gle/W618BZguPaRDyj6S7"
-           class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">Feedback Form</a>
-    </div>
 
-</div>
+
+    </div>
