--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -19,9 +19,8 @@
                                                               class="text-blue-500 hover:underline">OnlyWorlds
         Framework</a></b> section</p>
 
-    <p class="custom-font mb-2">Three applications, linked below, are available to introduce the framework
-    </p>
-    <p class="custom-font mb-2">More information in the <b><a
+
+    <p class="custom-font mb-2">More information on the three available apps (linked below) in the <b><a
             href="#" id="link-to-apps"
             class="text-blue-500 hover:underline">Applications section</a></b>
     </p>
@@ -29,10 +28,12 @@
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">Feedback Form</a></b>
     </p>
-      <p class="mb-4">Join the Discord server to provide feedback and contribute to the project</p>
-    <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
+      <p class="mb-2">Join the <b> <a href="https://discord.gg/twCjqvVBwb"
+           class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
+           rel="noopener noreferrer">Discord Server</a></b> to provide feedback and contribute to the project</p>
+{% comment %}    <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
         <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
-    </a>
+    </a>{% endcomment %}
 
     </div>
 <br>
