--- a/home/templates/content_worlds.html
+++ b/home/templates/content_worlds.html
@@ -1,7 +1,7 @@
 <!-- content_worlds.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="custom-font mb-4">World management interface under construction</p>
-    <p class="custom-font mb-4">Worlds can be imported and exported already using the API. Note down your world keys!</p>
+    <p class="custom-font mb-4">You can store worlds on the OW server using a prototype world key system.</p>
+    <p class="custom-font mb-4">Interface for world management under construction: write down your world keys for now.</p>
 
 </div>
