--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -31,22 +31,29 @@
             class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
             data-accordion-target="#accordion-collapsee-body-11" aria-expanded="false"
             aria-controls="accordion-collapsee-body-11">
-        (Mobile) Companion
+        Mobile Companion
         <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
         </svg>
     </button>
     <div id="accordion-collapsee-body-11" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-11">
-        <p class="custom-font mb-5">Flutter project developed in 2023 and 2024 as a mobile world creation
+        <p class="custom-font mb-2">Flutter project developed in 2023 and 2024 as a mobile world creation
             interface that helps introduce the framework with some gamification and novel features</p>
         <p class="custom-font mb-2">Lets you define a world, create and configure elements in it, follow a progression
             system with some guides and rewards, and chat with AI agents that are specialized for world build
             assistance</p>
-        <p class="custom-font mb-2">Currently in internal testing environments for both iOs and android</p>
-        <a href="{% static 'img/companion.jpeg' %}" target="_blank" style="width: 50px;" class="inline-block mb-3">
+                <a href="{% static 'img/companion.jpeg' %}" target="_blank" style="width: 80px;" class="inline-block mb-3">
    <img src="{% static 'img/companion.jpeg' %}" alt="Companion Preview" style="width: 350px" class="cursor-pointer">
         </a>
+
+        <p class="custom-font mb-2">iOs app is in TestFlight, a staging environment that you can install from the app store first</p>
+        <p class="custom-font mb-2">Android manual install: Download the APK file to your phone, open through file explorer, install</p>
+        <p class="custom-font mb-2">Google Play internal testing: to access, send a google email and the message 'android' on the <a href="https://www.onlyworlds.com/about/"
+                                                                           class="inline-block text-m font-bold text-blue-500 hover:underline"
+                                                                           target="_blank" rel="noopener noreferrer">About
+            page</a>, and you will gain access within 24hrs to allow remote install </p>
+
        <p class="custom-font">Known bugs and limitations:</p>
         <ul class="custom-font accordion-content accordion-list-item">
             <li>Number fields only hold positive integer values at this time</li>
@@ -57,13 +64,38 @@
     </div>
 </div>
 
+<div class="custom-font mb-2" id="accordion-collapsee13" data-accordion="collapsee">
+    <button type="button"
+            class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
+            data-accordion-target="#accordion-collapsee-body-13" aria-expanded="false"
+            aria-controls="accordion-collapsee-body-13">
+        Explorer
+        <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+             xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+        </svg>
+    </button>
+    <div id="accordion-collapsee-body-13" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-13">
 
+        <p class="custom-font mb-5">Unity runtime project for world (over)viewing that started development in 2024,
+            release in early summer</p>
+
+
+        <p class="custom-font mb-1">Includes:</p>
+        <ul class="accordion-content accordion-list-item">
+            <li>A web-based interface that can load directly from world keys</li>
+            <li>Dynamically creates diagrams for element relations, ownership and assignment</li>
+        </ul>
+
+
+    </div>
+</div>
 <div class="custom-font mb-2" id="accordion-collapsee12" data-accordion="collapsee">
     <button type="button"
             class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
             data-accordion-target="#accordion-collapsee-body-12" aria-expanded="false"
             aria-controls="accordion-collapsee-body-12">
-        (Unity Editor) Mapper
+        Mapper
         <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
@@ -109,32 +141,7 @@
 
     </div>
 </div>
-<div class="custom-font mb-2" id="accordion-collapsee13" data-accordion="collapsee">
-    <button type="button"
-            class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
-            data-accordion-target="#accordion-collapsee-body-13" aria-expanded="false"
-            aria-controls="accordion-collapsee-body-13">
-        (Unity WebGL) Explorer
-        <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-             xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-        </svg>
-    </button>
-    <div id="accordion-collapsee-body-13" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-13">
 
-        <p class="custom-font mb-5">Unity runtime project for world (over)viewing that started development in 2024,
-            release in early summer</p>
-
-
-        <p class="custom-font mb-1">Includes:</p>
-        <ul class="accordion-content accordion-list-item">
-            <li>A web-based interface that can load directly from world keys</li>
-            <li>Dynamically creates diagrams for element relations, ownership and assignment</li>
-        </ul>
-
-
-    </div>
-</div>
 <div class="custom-font mb-2" id="accordion-collapsee14" data-accordion="collapsee">
     <button type="button"
             class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
