--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -3,85 +3,93 @@
 <div class="custom-font mb-2">
     {#     <p class="text-sm">18 April 2024</p>#}
     {#     <p class="text-sm">OW version: 0.15.10</p>#}
-    <br>
 
-    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Welcome to OnlyWorlds!</h3>
-    <br>
-    <p class="custom-font mb-2">OnlyWorlds is a world building platform where worlds can be</p>
+
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Welcome to OnlyWorlds</h3>
+
+    <p class="custom-font mt-4 mb-2">Introducing a world building system where worlds can be</p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>Created and edited by any supporting software</li>
+        <li>Created and edited by varying apps, tools and websites</li>
         <li>Brought to life through games and simulations</li>
-        <li>Easily transferred across applications</li>
+        <li>Easily transferred and managed</li>
     </ul>
+<p class="custom-font mt-3 mb-5">You are invited to try the platform and support its development!</p>
 
-    <br>
-    <p class="custom-font mb-2">More information in the <b><a href="#" id="link-to-framework"
-                                                              class="text-blue-500 hover:underline">OnlyWorlds
-        Framework</a></b> section</p>
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Next Steps</h3>
 
+    <p class="custom-font mt-3 mb-2">Read more about <b><a href="#" id="link-to-framework"
+                                                              class="text-blue-500 hover:underline">OnlyWorlds</a></b></p>
 
-    <p class="custom-font mb-2">More information on the three available apps (linked below) in the <b><a
+    <p class="custom-font mb-2">Try the <b><a
             href="#" id="link-to-apps"
-            class="text-blue-500 hover:underline">Applications section</a></b>
+            class="text-blue-500 hover:underline">Applications</a></b>
     </p>
-   <p class="custom-font mb-2">Leave feedback using this <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+   <p class="custom-font mb-3">Give some <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">Feedback Form</a></b>
+           rel="noopener noreferrer">feedback</a></b>
     </p>
-      <p class="mb-2">Join the <b> <a href="https://discord.gg/twCjqvVBwb"
+{% comment %}      <p class="mb-2">Or in the <b> <a href="https://discord.gg/twCjqvVBwb"
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">Discord Server</a></b> to provide feedback and contribute to the project</p>
-{% comment %}    <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
-        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
-    </a>{% endcomment %}
+           rel="noopener noreferrer">Discord Server</a></b></p>{% endcomment %}
+
+    <div class="flex flex-row items-center gap-4 mt-2">
+            <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
+        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-2 w-6">
+    </a>
 
     </div>
-<br>
-    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Mobile App</h3>
-    <br>
-    <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
-        <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;"">
-    </a>
-    <p class="custom-font mt-2">iOs version is staged in TestFlight. Follow steps to install TestFlight first, then open
-        link
-        again</p>
-    <br>
+    </div>
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Companion App</h3>
 
-    <a href="https://play.google.com/apps/internaltest/4700705784602434522" target="_blank"
+
+
+        <div class="flex flex-row items-center gap-4 mt-4">
+        <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
+            <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;">
+        </a>
+        <p class="custom-font ml-2">iOs (TestFlight)</p>
+    </div>
+
+
+
+     <div class="flex flex-row items-center gap-4 mt-5">
+       <a href="https://drive.google.com/file/d/1UwQ5pwH5zHQRQYIeKZJmvSYKve13BxjQ/view?usp=sharing" target="_blank"
        rel="noopener noreferrer">
         <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
     </a>
+        <p class="custom-font ml-2">Android (APK)</p>
+    </div>
 
-    <p class="mb-1">Android version is in closed testing. To access through this channel:
-        Please send any google email, with 'android' as message, on the <a href="https://www.onlyworlds.com/about/"
-                                                                           class="inline-block text-m font-bold text-blue-500 hover:underline"
-                                                                           target="_blank" rel="noopener noreferrer">About
-            page</a>. You will receive an access notification within 24 hours</p>
-    <p class="mb-8">Or directly download the APK file <a
-            href="https://drive.google.com/file/d/1UwQ5pwH5zHQRQYIeKZJmvSYKve13BxjQ/view?usp=sharing"
-            class="inline-block text-m font-bold text-blue-500 hover:underline"
-            target="_blank" rel="noopener noreferrer">here</a>, transfer to your device, then open from file viewer </p>
+    <div class="flex flex-row items-center gap-4 mb-7 mt-5">
+       <a href="https://play.google.com/apps/internaltest/4700705784602434522" target="_blank"
+       rel="noopener noreferrer">
+        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
+    </a>
+        <p class="custom-font ml-2">Android (Google Play, requires invite)</p>
+    </div>
 
-    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">World Viewer</h3>
-<br>
-   <p class="custom-font mb-2">Use the <b>  <a href="{% url 'unity' %}"
+
+
+    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Explorer</h3>
+
+   <p class="custom-font mt-2 mb-2"><b>  <a href="{% url 'explorer' %}"
                class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-               rel="noopener noreferrer">Web Interface</a></b> to view and edit worlds
+               rel="noopener noreferrer">Web Interface</a></b>
     </p>
 
-   <p class="custom-font mb-2">Or download the <b>  <a href="TODODO"
+   <p class="custom-font mb-3"><b>  <a href="TODO"
                class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-               rel="noopener noreferrer">windows desktop version</a></b>
+               rel="noopener noreferrer">Desktop</a> </b> (windows)
     </p>
     <div>
 
         </div>
-<br>
-   <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">World Mapper</h3>
-<br>
- <p class="custom-font mb-2">Code and guide at the <b> <a href="TODODO"
+
+   <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Mapper</h3>
+
+ <p class="custom-font mt-2 mb-2"><b> <a href="https://github.com/tmoosting/OnlyWorldsEngine"
                class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-               rel="noopener noreferrer"> Mapper repository </a></b>
+               rel="noopener noreferrer">GitHub</a></b>
     </p>
     {% comment %}    <div class="flex flex-row items-center gap-4 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
@@ -95,8 +103,6 @@
             <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
         </a>
     </div>{% endcomment %}
-    <br>
-    <br>
 
     <div>
 
