--- a/home/templates/contact_thanks.html
+++ b/home/templates/contact_thanks.html
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="min-h-screen bg-black flex flex-col items-center justify-center text-white">
     <div class="bg-black p-8 rounded-lg shadow-lg text-center">
-        <h2 class="text-2xl font-semibold mb-4 text-white">Thanks for your interest!</h2>
-        <p class="mb-4 text-white-600">Your message has been successfully sent<br><br></p>
+        <h2 class="text-2xl font-semibold mb-4 text-white">Thank you!</h2>
+        <p class="mb-4 text-white-600">Message successfully sent<br><br></p>
         <a href="{% url 'home' %}" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-700 transition-colors">Return</a>
     </div>
 </div>
