--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -109,16 +109,15 @@
             Much of this in Unity, with a highlight in <a href="https://github.com/worldsmithdev/Worldsmith"
                                                           class="text-blue-500 hover:underline" target="_blank"
                                                           rel="noopener noreferrer">WorldSmith</a> in 2018:
-            An open source world engine with a <a href="{% url 'sikelia_webgl' %}" class="text-blue-500 hover:underline"
-                                                  target="_blank" rel="noopener noreferrer">world</a> (Sicily ~500BC),
-        economy, and game built on top of it.
+            An open source world engine where I recreated <a href="{% url 'sikelia_webgl' %}" class="text-blue-500 hover:underline"
+                                                  target="_blank" rel="noopener noreferrer">ancient Sicily of ~500BC</a> with an economy simulation and game built on top.
             <br>
             My interests include ((tools for (simulation of)) worlds for) games and history: political, economy,
             military.
             <br>
-            I wrote my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf"
+            One of my favorite creative puzzles is breaking down real world things into usable data. In my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf"
                           class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">master's
-                thesis</a> on the <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline"
+                thesis</a> I focused on the <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline"
                                      target="_blank" rel="noopener noreferrer">translation of political dynamics</a>
             into world building structures.
         </p>
@@ -144,9 +143,6 @@
         <br>
         <p class="custom-font mb-2"><b>Database</b></p>
         <ul class="custom-font accordion-content accordion-list-item">
-            <li>The core framework consists of 18 element Categories, each with a set of attribute groups and fields,
-                many of which link to other elements
-            </li>
             <li>Content level: basic data formulation in place, in need of user feedback</li>
             <li>Technical level: reworking the legacy SQLite systems into a central open source</li>
             <li>Aim to coalesce these two into a 1.0 release late 2024</li>
